# RocketMongoDemo

./: Cargo.toml  Rocket.toml
src/: insert.rs  main.rs  query.rs  rank.rs
