[package]
name = "online-movie-database"
version = "0.1.0"
authors = ["Iosmanthus Teng <myosmanthustree@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mongodb = "0.3.11"
time = "0.1.42"


[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json", "mongodb_pool"]


